# EndoRobo-EnvAwareNav

./: .gitignore  CMakeLists.txt  DEPTH_ESTIMATION_GUIDE.md  PROJECT_PROGRESS.md  README.md  copy_python_dlls.ps1  install_pcl_allinone.ps1  monitor_depth.ps1  run_with_gui.bat  setup_dependencies.ps1  test_camera.py  test_pcl.cpp  test_pcl_reconstruction.cpp  test_pcl_simple.cpp  test_stage3.bat  test_visualization.bat
calibration/: CMakeLists.txt  README.md  build_calibration.bat  calibrate_from_images.py  calibration_final.cpp  calibration_working.cpp  camera_calibration.cpp  camera_calibration_fixed.cpp  camera_calibration_from_images.yaml  generate_chessboard.py  generate_chessboard_simple.py  quick_start.bat  simple_calibration.cpp
config/: camera_config.yaml
data/: .gitkeep
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PCL_INSTALLATION.md  QUICKSTART.md
include/camera/: camera_capture.h  image_processor.h
include/core/: config_manager.h  logger.h
include/navigation/: visual_odometry.h
include/python_interface/: depth_estimator.h  pose_estimator.h  python_wrapper.h
include/reconstruction/: intestinal_reconstructor.h  point_cloud_builder.h  redundancy_remover.h
include/utils/: math_utils.h  timer.h
python_models/: README.md  depth_model.py  depth_model_dav2.py  pose_model.py  requirements.txt
python_models/depth_anything_v2/: DOWNLOAD_INSTRUCTIONS.md  __init__.py  download_direct.py  download_model.py  dpt.py
python_models/depth_estimation/: .gitkeep
python_models/pose_estimation/: .gitkeep
src/: main.cpp
src/camera/: camera_capture.cpp  image_processor.cpp
src/core/: config_manager.cpp  logger.cpp
src/navigation/: visual_odometry.cpp
src/python_interface/: depth_estimator.cpp  depth_estimator_dav2.cpp  pose_estimator.cpp  python_wrapper.cpp
src/reconstruction/: intestinal_reconstructor.cpp  point_cloud_builder.cpp  redundancy_remover.cpp
src/utils/: math_utils.cpp  timer.cpp
tools/: view_cloud.py
